# wushu-backend

./: .env.example  Caddyfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
app/core/: config.py  models.py
app/db/: models.py
app/routers/: athlete.py  institute.py  tournament.py
